--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,11 @@
 			<version>3.2.0-B02</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>at.favre.lib</groupId>
+			<artifactId>bcrypt</artifactId>
+			<version>0.10.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
